--- a/src/app/styles.module.css
+++ b/src/app/styles.module.css
@@ -1,10 +1,25 @@
 .wrapper {
-  background-image: url("../assets/0087.jpg");
-  background-repeat:no-repeat;
+  background-color: rgb(0, 0, 0);
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 30px;
   height: 100vh;
   width: 100%;
+}
+
+
+.logo {
+  background-position: center;
+  background-size:contain;
+  background-image: url("../assets/222.png");
+  background-repeat:no-repeat;
+  height: 300px;
+  width: 800px;
+}
+
+
+.video {
+  height: 1000px;
+  width: 2000px;
 }
