--- a/src/app/styles.module.css
+++ b/src/app/styles.module.css
@@ -20,34 +20,34 @@
 
 
 .video {
-  height: 100%;
-  width: 1500px;
+  height: 100vh;
+  width: 1000px;
 }
 
 
 
-@media (min-width: 370px) {
+@media (max-width: 370px) {
 .video {
   height: 100%;
-  width: 300px;
+  width: 400px;
 }
 }
 
 
-@media (min-width: 380px) {
-.video {
-  height: 100%;
-  width: 500px;
-}
-}
-
-
-@media (min-width: 390px) {
+@media (max-width: 380px) {
 .video {
   height: 100%;
   width: 500px;
 }
 }
+
+
+/* @media (min-width: 390px) {
+.video {
+  height: 100%;
+  width: 500px;
+}
+} */
 
 
 @media (min-width: 480px) {
